tests/machine/x/python/len_map.error
run: exit status 1
  File "/workspace/mochi/tests/machine/x/python/len_map.py", line 15
    print(len(Auto1(_=1, _=2)))
                         ^^^
SyntaxError: keyword argument repeated: _

