tests/machine/x/python/len_map.py
# Generated by Mochi compiler v0.10.26 on 2025-07-16T15:49:11Z
from __future__ import annotations
import dataclasses


@dataclasses.dataclass
class Auto1:
    a: int
    b: int

    def __getitem__(self, key):
        return getattr(self, key)


print(len(Auto1(_=1, _=2)))
